12/30 Datagen for all non-unique tags, added the set of "flipped" gradients